[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/entities/Projectile.gd" type="Script" id=1]
[ext_resource path="res://sprites/player/arrow_side.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.06963, 1.67516 )

[node name="Arrow" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 0
script = ExtResource( 1 )
speed = 200.0
rotates = true

[node name="SpritePivot" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="SpritePivot"]
texture = ExtResource( 2 )

[node name="ArrowHitbox" type="Area2D" parent="."]
show_behind_parent = true
collision_layer = 8
collision_mask = 259

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArrowHitbox"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ExistenceTime" type="Timer" parent="."]
one_shot = true

[connection signal="area_shape_entered" from="ArrowHitbox" to="." method="_on_Hitbox_area_shape_entered"]
[connection signal="area_shape_entered" from="ArrowHitbox" to="." method="_on_Area2D_area_shape_entered"]
[connection signal="body_entered" from="ArrowHitbox" to="." method="_on_ArrowHitbox_body_entered"]
[connection signal="body_shape_entered" from="ArrowHitbox" to="." method="_on_Area2D_body_shape_entered"]
[connection signal="timeout" from="ExistenceTime" to="." method="_on_ExistenceTime_timeout"]
