[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/projectiles/big_fireball.png" type="Texture" id=1]
[ext_resource path="res://src/entities/Projectile.gd" type="Script" id=2]
[ext_resource path="res://sprites/projectiles/wizard_fireball_hit.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 7, 7 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 7, 0, 7, 7 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 7, 7, 7 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 14, 0, 14, 14 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 14, 14, 14 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 14, 14, 14, 14 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 12.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": false,
"name": "break",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 3.5, 3.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 3.5, 3.5 )

[node name="Fireball" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 256
script = ExtResource( 2 )
speed = 150.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
frame = 1
playing = true

[node name="ProjectileHitbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 260

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProjectileHitbox"]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 6 )
disabled = true

[node name="ExistenceTime" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="ProjectileHitbox" to="." method="_on_ProjectileHitbox_area_entered"]
[connection signal="area_shape_entered" from="ProjectileHitbox" to="." method="_on_ProjectileHitbox_area_shape_entered"]
[connection signal="body_entered" from="ProjectileHitbox" to="." method="_on_ProjectileHitbox_body_entered"]
[connection signal="timeout" from="ExistenceTime" to="." method="_on_ExistenceTime_timeout"]
